fix(css): fix layout to be correct aligning

--- a/practice-one/src/styles/sections/benefits.css
+++ b/practice-one/src/styles/sections/benefits.css
@@ -2,10 +2,10 @@
   display: flex;
   gap: 56px 0;
   flex-direction: column;
-  align-items: center;
 }
 
 .benefits-heading {
+  align-self: center;
   font-size: var(--font-size-2xl);
   line-height: 50px;
 }
@@ -15,24 +15,29 @@
   align-items: center;
   box-sizing: border-box; /* need to apply this style again */
   width: 1060px;
-  padding: 70px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  padding-left: 38px;
   background-color: var(--background-color-card);
   background-repeat: no-repeat;
   background-position: right 110px center;
 
   &:nth-of-type(1) {
+    margin-left: 70px;
     background-image: url("../../assets/images/working-hour.png");
   }
 
   &:nth-of-type(2) {
     flex-direction: row-reverse;
-    margin-left: 85px;
+    margin-left: 150px;
+    padding-right: 161px;
     background-image: url("../../assets/images/earning.png");
     background-position: left 110px center;
   }
 
   &:nth-of-type(3) {
     background-image: url("../../assets/images/support.png");
+    margin-left: 70px;
     padding-top: calc(70px - 21px);
     padding-bottom: calc(70px + 21px);
 
